usando armadilha para atualizar a view sem precisar dar update

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
   </form>
 
   <div class="text-center">
-    <button class="btn btn-primary text-center" type="button">
+    <button class="btn btn-info text-center" type="button">
       Importar Negociações
     </button>
-    <button class="btn btn-primary text-center" type="button">
-      Apagar
+    <button class="btn btn-danger text-center" type="button" onclick="negociacaoController.apaga()">
+      Apagar Negociações
     </button>
   </div>
   <br>
